doctype html criado

--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
-<h1>Hello World!</h1>
+<!DOCTYPE html>
 
-<div>
-	<p>Este eh apenas um exercício com o Git<p>
-<div>
+<html>
+	<body>
 
-<div>
-	<p>Linha adicionada direto do GitHub!<p>
-<div>
+		<h1>Hello World!</h1>
+
+		<div>
+			<p>Este eh apenas um exercício com o Git<p>
+		<div>
+
+
+		<div>
+			<p>Linha adicionada direto do GitHub!<p>
+		<div>
+
+	</body>
 	
+</html>
